--- a/notebook/MODEL_TRAINING.ipynb
+++ b/notebook/MODEL_TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "bd31a651",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,14 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_model(true, predicted):\n",
     "    mae = mean_absolute_error(true, predicted)\n",
-    "    mse = mean_squared_error(true, predicted)\n",
+    "    # mse = mean_squared_error(true, predicted)\n",
     "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
     "    r2_square = r2_score(true, predicted)\n",
     "    return mae, rmse, r2_square"
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -589,22 +589,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.7292\n",
-      "- Mean Absolute Error: 6.1400\n",
-      "- R2 Score: 0.7545\n",
+      "- Root Mean Squared Error: 8.2982\n",
+      "- Mean Absolute Error: 6.5700\n",
+      "- R2 Score: 0.7170\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2928\n",
-      "- Mean Absolute Error: 1.8341\n",
-      "- R2 Score: 0.9767\n",
+      "- Root Mean Squared Error: 2.3134\n",
+      "- Mean Absolute Error: 1.8274\n",
+      "- R2 Score: 0.9763\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9858\n",
-      "- Mean Absolute Error: 4.6551\n",
-      "- R2 Score: 0.8528\n",
+      "- Root Mean Squared Error: 5.9929\n",
+      "- Mean Absolute Error: 4.6448\n",
+      "- R2 Score: 0.8524\n",
       "===================================\n",
       "\n",
       "\n",
@@ -623,14 +623,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7545\n",
-      "- Mean Absolute Error: 4.6776\n",
-      "- R2 Score: 0.8531\n",
+      "- Root Mean Squared Error: 5.8382\n",
+      "- Mean Absolute Error: 4.7853\n",
+      "- R2 Score: 0.8488\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9661\n",
-      "- Mean Absolute Error: 4.6384\n",
-      "- R2 Score: 0.8537\n",
+      "- Root Mean Squared Error: 6.0718\n",
+      "- Mean Absolute Error: 4.6999\n",
+      "- R2 Score: 0.8485\n",
       "===================================\n",
       "\n",
       "\n"
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -736,14 +736,14 @@
        "      <td>0.879247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.853723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852756</td>\n",
+       "      <td>0.852408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.848497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -763,7 +763,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.754498</td>\n",
+       "      <td>0.717020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -773,15 +773,15 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879247\n",
-       "7       AdaBoost Regressor  0.853723\n",
-       "5  Random Forest Regressor  0.852756\n",
+       "5  Random Forest Regressor  0.852408\n",
+       "7       AdaBoost Regressor  0.848497\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.754498"
+       "4            Decision Tree  0.717020"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -830,15 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1896231",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -848,7 +840,7 @@
        "Text(0, 0.5, 'Predicted')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -871,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -900,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1011,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
