--- a/notebook/MODEL_TRAINING.ipynb
+++ b/notebook/MODEL_TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "bd31a651",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,15 +417,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "1e290fe3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['gender', 'race_ethnicity', 'parental_level_of_education', 'lunch',\n",
+       "       'test_preparation_course'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create Column Transformer with 3 types of transformers\n",
     "num_features = X.select_dtypes(exclude=\"object\").columns\n",
     "cat_features = X.select_dtypes(include=\"object\").columns\n",
-    "\n",
+    "num_features\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
@@ -437,12 +450,13 @@
     "        (\"OneHotEncoder\", oh_transformer, cat_features),\n",
     "         (\"StandardScaler\", numeric_transformer, num_features),        \n",
     "    ]\n",
-    ")"
+    ")\n",
+    "cat_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -452,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -462,7 +476,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -483,7 +497,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -520,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -589,22 +603,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.2982\n",
-      "- Mean Absolute Error: 6.5700\n",
-      "- R2 Score: 0.7170\n",
+      "- Root Mean Squared Error: 8.1142\n",
+      "- Mean Absolute Error: 6.4600\n",
+      "- R2 Score: 0.7294\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3134\n",
-      "- Mean Absolute Error: 1.8274\n",
-      "- R2 Score: 0.9763\n",
+      "- Root Mean Squared Error: 2.2945\n",
+      "- Mean Absolute Error: 1.8348\n",
+      "- R2 Score: 0.9766\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9929\n",
-      "- Mean Absolute Error: 4.6448\n",
-      "- R2 Score: 0.8524\n",
+      "- Root Mean Squared Error: 6.0585\n",
+      "- Mean Absolute Error: 4.6682\n",
+      "- R2 Score: 0.8492\n",
       "===================================\n",
       "\n",
       "\n",
@@ -623,14 +637,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8382\n",
-      "- Mean Absolute Error: 4.7853\n",
-      "- R2 Score: 0.8488\n",
+      "- Root Mean Squared Error: 5.8204\n",
+      "- Mean Absolute Error: 4.7540\n",
+      "- R2 Score: 0.8497\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0718\n",
-      "- Mean Absolute Error: 4.6999\n",
-      "- R2 Score: 0.8485\n",
+      "- Root Mean Squared Error: 5.9735\n",
+      "- Mean Absolute Error: 4.6566\n",
+      "- R2 Score: 0.8534\n",
       "===================================\n",
       "\n",
       "\n"
@@ -695,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -736,14 +750,14 @@
        "      <td>0.879247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.852408</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.848497</td>\n",
+       "      <td>0.853362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.849159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -763,7 +777,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.717020</td>\n",
+       "      <td>0.729430</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -773,15 +787,15 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879247\n",
-       "5  Random Forest Regressor  0.852408\n",
-       "7       AdaBoost Regressor  0.848497\n",
+       "7       AdaBoost Regressor  0.853362\n",
+       "5  Random Forest Regressor  0.849159\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.717020"
+       "4            Decision Tree  0.729430"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -830,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -840,7 +854,7 @@
        "Text(0, 0.5, 'Predicted')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -863,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -892,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1025,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
